fix(theme): narrow screen layout issue (close: #41) (#42)

--- a/packages/vuepress-theme-vt/styles/wrapper.styl
+++ b/packages/vuepress-theme-vt/styles/wrapper.styl
@@ -1,7 +1,6 @@
 $wrapper {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 2rem 2.5rem 2rem 2.5rem;
+  max-width: var(--vp-doc-max-width);
+  padding: 2rem 0rem 2rem var(--vp-doc-padding);
 
   @media (max-width: $MQNarrow) {
     padding: 2rem;
